2002-08-28  Darin Adler  <darin@apple.com>

	- fixed 3032148 -- Button not disabled in page

        * kwq/KWQWidget.mm: (QWidget::setEnabled): Call setEnabled:
	on the NSView if it implements it.

2002-08-28  Darin Adler  <darin@apple.com>

	- fixed 3030212 -- Problems rendering pages that specify "x-mac-roman" character
	set (like our Danish help pages)

        * kwq/mac-encodings.txt: Added x-mac-roman as an alias for macintosh.

2002-08-27  Darin Adler  <darin@apple.com>

        * force-clean-timestamp: Dave's changes require a full build. I found out the
	hard way, by debugging for a while.

2002-08-27  Richard Williamson <rjw@apple.com>

        * kwq/WebCoreBridge.h:
        
        Fixed constants to conform to WebKit.  These need to be shared.

2002-08-27  David Hyatt  <hyatt@apple.com>

	Change relative positioned blocks so that they are treated as special objects and
	painted last along with absolutely positioned blocks and floaters.  Note that the
	entire special object system is fundamentally flawed, and it needs to be replaced
	with a real layering subsystem.

	This checkin at least gets relatively positioned divs painting correctly some of
	the time (in the cases where the containing blocks of absolute and relative positioned
	divs happen to be the same).  It does not, however, deal with the problem of ensuring
	correct stacking of positioned elements with different containing blocks.

	render_layer.h and .cpp include a new implementation (not used yet, just the beginnings)
	of a layering subsystem that I am going to be working on over the next few days
	that will eventually be responsible for handling event dispatching and painting and that
	will also understand how to deal with form controls and other objects that have Cocoa
	views.
	
        * WebCore.pbproj/project.pbxproj:
        * khtml/rendering/render_box.cpp:
        (RenderBox::RenderBox):
        * khtml/rendering/render_box.h:
        * khtml/rendering/render_flow.cpp: